--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,7 +6,7 @@
   background-repeat: no-repeat;
   font-family: 'MuseoSans',Arial, sans-serif;
   color: #fff;
-};
+}
 
 /*@media screen and (min-width:1280px) and (max-width: 769px){
   .page {
